--- a/anycluster/templates/base.html
+++ b/anycluster/templates/base.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<script type="text/javascript"
-			  src="https://maps.googleapis.com/maps/api/js?v=3.8&key=AIzaSyC7zFb7ymHd59HbHYcAld46OcF93OkjD9s&sensor=false">
+			  src="https://maps.googleapis.com/maps/api/js?v=3.8&key=YOURKEY&sensor=false">
 		</script>
 		<script type="text/javascript" src="{% static 'anycluster/anycluster.js' %}"></script>
 		<script type="text/javascript" src="{% static 'anycluster/infobox_packed.js' %}"></script>
