--- a/anycluster/templates/base.html
+++ b/anycluster/templates/base.html
@@ -1,8 +1,9 @@
 {% load staticfiles %}
 <html>
 	<head>
+		<script type="text/javascript" src="{% static 'anycluster/OpenLayers.js' %}"></script>
 		<script type="text/javascript"
-			  src="https://maps.googleapis.com/maps/api/js?v=3.8&key=YOURKEY&sensor=false">
+			  src="https://maps.googleapis.com/maps/api/js?v=3.8&key=AIzaSyC7zFb7ymHd59HbHYcAld46OcF93OkjD9s&sensor=false">
 		</script>
 		<script type="text/javascript" src="{% static 'anycluster/anycluster.js' %}"></script>
 		<script type="text/javascript" src="{% static 'anycluster/infobox_packed.js' %}"></script>
@@ -12,7 +13,7 @@
 			var anyclusterSettings = {
 				mapType : "google", // "google" or "osm"
 				gridSize: 256, //integer
-				zoom: 2, //initial zoom
+				zoom: 9, //initial zoom
 				center: [49,11], //initial center in lng lat
 				MapTypeId: "TERRAIN", //google only - choose from  ROADMAP,SATELLITE,HYBRID or TERRAIN
 				clusterMethod : "kmeans", //"grid" or "kmeans" or "centroid"
@@ -22,10 +23,25 @@
 				}
 	
 			}
+			
+			var anyclusterSettings_osm = {
+				mapType : "osm", // "google" or "osm"
+				gridSize: 256, //integer
+				zoom: 9, //initial zoom
+				center: [49,11], //initial center in lng lat
+				MapTypeId: "TERRAIN", //google only - choose from  ROADMAP,SATELLITE,HYBRID or TERRAIN
+				clusterMethod : "kmeans", //"grid" or "kmeans" or "centroid"
+				iconType: "simple", //"exact" (with exact cluster counts) or "simple" (with rounded counts) 
+				singlePinImages: {
+					'dbvalue':'/static/path/to/image.png' //optional, use in conjunction with django settings: 'ANYCLUSTER_PINCOLUMN'
+				}
+	
+			}
 		
 			window.onload = function(){
 			
 				var googlemap = new Anycluster("gmap", anyclusterSettings);
+				var osmap = new Anycluster("osmap", anyclusterSettings_osm);
 			}
 		</script>
 		
@@ -35,6 +51,34 @@
 				font-weight: bold;
 			}
 		</style>
+		
+		<style>
+		  .olControlAttribution {
+		      position: absolute;
+		      font-size: 10px;
+		      text-align: right;
+		      color: #eeeeee;
+		      bottom: 0;
+		      right: 0;
+		      background: #130085; /* fallback for IE - IE6 requires background shorthand*/
+		      background: rgba(0, 60, 136, 0.3);
+		      filter: alpha(opacity=30);
+		      font-family: 'Lucida Grande', Verdana, Geneva, Lucida, Arial, Helvetica, sans-serif;
+		      padding: 2px 4px;
+		      border-radius: 5px 0 0 0;
+		  }
+		  .olControlAttribution a {
+		      color: #eeeeee;
+		      font-weight: bold;
+		  }
+		  .olControlZoom a:hover {
+		      color: white;
+		  }
+		  div.olControlZoomPanel {
+		      top: 15px;
+		      left: 15px;
+		  }
+	  </style>
 		
 	</head>
 	<body>
