added custom singlepin markers

--- a/demo/anymap/templates/base.html
+++ b/demo/anymap/templates/base.html
@@ -23,7 +23,8 @@
 					'imperial':'/static/anycluster/pin_imperial.png', //optional, use in conjunction with django settings: 'ANYCLUSTER_PINCOLUMN'
 					'stone':'/static/anycluster/pin_stone.png',
 					'wild':'/static/anycluster/pin_wild.png',
-					'japanese':'/static/anycluster/pin_japan.png'
+					'japanese':'/static/anycluster/pin_japan.png',
+					'flower':'/static/anycluster/pin_flower.png'
 				},
 				onFinalClick : function(entries){
 					openPopup(entries);
