readme update, fetch all markers on the viewport as list

--- a/demo/anymap/templates/base.html
+++ b/demo/anymap/templates/base.html
@@ -18,7 +18,7 @@
 				zoom: 3, //initial zoom
 				center: [49,11], //initial center in lng lat
 				MapTypeId: "TERRAIN", //google only - choose from  ROADMAP,SATELLITE,HYBRID or TERRAIN
-				clusterMethod : "grid", //"grid" or "kmeans" or "centroid"
+				clusterMethod : "kmeans", //"grid" or "kmeans" or "centroid"
 				iconType: "exact", //"exact" (with exact cluster counts) or "simple" (with rounded counts) 
 				singlePinImages: {
 					'imperial':'/static/anycluster/pin_imperial.png', //optional, use in conjunction with django settings: 'ANYCLUSTER_PINCOLUMN'
