--- a/demo/anymap/templates/base.html
+++ b/demo/anymap/templates/base.html
@@ -1,14 +1,13 @@
 {% load staticfiles %}
 <html>
 	<head>
-		<script type="text/javascript" src="{% static 'anycluster/OpenLayers.js' %}"></script>
+		<!--<script type="text/javascript" src="{% static 'anycluster/OpenLayers.js' %}"></script>-->
 		<script type="text/javascript"
 			  src="https://maps.googleapis.com/maps/api/js?v=3.8&key=AIzaSyC7zFb7ymHd59HbHYcAld46OcF93OkjD9s&sensor=false">
 		</script>
 		<script type="text/javascript" src="{% static 'anycluster/anycluster.js' %}"></script>
 		<script type="text/javascript" src="{% static 'anycluster/django_ajax_csrf.js' %}"></script>
-		<script type="text/javascript" src="{% static 'anycluster/infobox_packed.js' %}"></script>
-		<script type="text/javascript" src="{% static 'anycluster/markerwithlabel_packed.js' %}"></script>
+		<script type="text/javascript" src="{% static 'anycluster/anycluster_marker.js' %}"></script>
 		<script type="text/javascript">
 		
 		
