pass map marker to onFinalClick

--- a/demo/anymap/templates/base.html
+++ b/demo/anymap/templates/base.html
@@ -29,7 +29,7 @@
 					'japanese':'/static/anycluster/pin_japan.png',
 					'flower':'/static/anycluster/pin_flower.png'
 				},
-				onFinalClick : function(entries){
+				onFinalClick : function(mapmarker, entries){
 					openPopup(entries);
 				}
 			};
