anycluster-leaflet, fix symlinks

--- a/demo/django/anymap/templates/leaflet.html
+++ b/demo/django/anymap/templates/leaflet.html
@@ -8,5 +8,5 @@
 
 
 {% block script %}
-<script type="module" src="{% static 'anymap/anycluster-leaflet.js' %}"></script>
+<script type="module" src="{% static 'anymap/anymap-leaflet.js' %}"></script>
 {% endblock %}
