--- a/demo/django/anymap/templates/google.html
+++ b/demo/django/anymap/templates/google.html
@@ -27,6 +27,8 @@
     const map = new google.maps.Map(document.getElementById("map"), {
         zoom: 3,
         center: { lat: 47.4, lng: 10.3 },
+        minZoom:3,
+        maxZoom: 13
     });
 
     const singlePinImages = {
