--- a/demo/django/anymap/templates/map_base.html
+++ b/demo/django/anymap/templates/map_base.html
@@ -88,6 +88,16 @@
 
                 </div>
             </div>
+            <div class="col-12 col-md-6 text-center">
+                <h2>nested</h2>
+                
+
+                    <button id="nested-button" type="button" class="btn btn-outline-primary">
+                        (flower and free) OR (stone and paid)
+                    </button>
+
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
