--- a/demo/django/anymap/templates/map_base.html
+++ b/demo/django/anymap/templates/map_base.html
@@ -19,6 +19,9 @@
             <div class="col-12 col-md-10 col-lg-8 d-flex justify-content-center align-items-center">
                 <div id="map"></div>
             </div>
+            <div class="col-12 my-2 text-center">
+                Total count: <span id="total-garden-count"></span>, Stone garden count: <span id="stone-garden-count"></span>, Flower garden count: <span id="flower-garden-count"></span>
+            </div>
         </div>
         <div class="row mt-5 justify-content-center">
             <div class="col-12 col-md-6 text-center">
