--- a/demo/django/anymap/templates/map_base.html
+++ b/demo/django/anymap/templates/map_base.html
@@ -48,7 +48,9 @@
             </div>
         </div>
         <div class="row mt-5 text-center">
-            <h1>Filters</h1>
+            <div class="col-12">
+                <h1>Filters</h1>
+            </div>
             <div class="col-12 my-5 text-center">
                 <h2>garden type</h2>
                 <div class="btn-group" role="group">
@@ -100,6 +102,14 @@
                     </button>
 
                 </div>
+            </div>
+        </div>
+        <div class="row mt-5 text-center">
+            <div class="col-12">
+                <h1>List of objects on Map (first page)</h1>
+            </div>
+            <div id="map-content-list" class="col-12">
+
             </div>
         </div>
     </div>
